--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,17 @@
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-error.log
-package-lock.json
-yarn.lock
 
 # Production build
 dist/
 build/
-.next/
-out/
+dist-ssr/
 
 # Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
 
-# IDE and Editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
-*.sublime-project
-*.sublime-workspace
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# OS files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Vite
+.vite/
 
 # Logs
 logs/
@@ -49,19 +19,26 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
 # Testing
 coverage/
 .nyc_output/
 
-# Vite
-.vite/
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Misc
-.cache
-.parcel-cache
+# OS files
+.DS_Store
+Thumbs.db
+
+# Cache
+.cache/
+.parcel-cache/
 .eslintcache
-.prettierignore
-dist-ssr
+
+# Certificates
 *.pem
