--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "axios": "^1.13.5",
+    "firebase": "^12.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.13.0"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.13.0",
+    "remark-gfm": "4.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
